# transmogrifier

./: .gitignore  NOTES.md  README.md  pyproject.toml
docs/: index.html
src/transmogrifier/: __init__.py  calibrate.py  cli.py  core.py  detector.py  kindex_integration.py  mcp_server.py  profiles.py  rules.py  system_prompts.py  task_classifier.py  validator.py
src/transmogrifier/backends/: __init__.py  anthropic.py  gemini.py  openai.py
tests/: test_calibrate.py  test_core.py  test_detector.py  test_profiles.py  test_rules.py  test_task_classifier.py
